<resources>
    <string name="app_name">BetGame</string>
    <string name="active_bets">Active Bets</string>
    <string name="vs">vs</string>
    <string name="semicolon">:</string>
    <string name="upcoming_games">Upcoming Games</string>
    <string name="home_button">Home</string>
    <string name="money_button">Cash</string>
    <string name="schedule_button">All Games</string>
    <string name="home_fragment_display_all_string">See all</string>
    <string name="home_fragment_see_more_string">See more</string>
    <string name="place_new_bet_title">Create Bet</string>
    <string name="default_value_place_new_bet">0</string>
    <string name="string_amount_info">Amount:</string>
    <string name="submit_button_text">Submit</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="title_confirm_bet">Validate Bet</string>
    <string name="back_button_bet_activity">Back</string>
    <string name="bet_placed">Bet placed</string>
    <string name="draw">Draw</string>
    <string name="finished_bet">Finished Bet</string>
    <string name="claim_reward">Claim</string>
    <string name="your_reward">Your Reward:</string>
    <string name="no_bets_placed">You have no active bets</string>
    <string name="view_add_get_reward">Earn Cash for watching an Ad</string>
    <string name="ad_reward">+100$</string>
    <string name="all_active_bets">All active bets</string>
    <string name="spin">Daily Spin</string>
    <string name="daily_spin">Spin the lucky wheel</string>
    <string name="no_games">There are no Games for this Event, please try again later.</string>
    <string name="splash_screen_welcome_msg">Free sports betting</string>
    <string name="splash_screen_title">BetGame</string>
    <string name="active_bets_bet_amount">Amount placed:</string>
    <string name="active_bets_team_selected">Selected team:</string>
    <string name="active_bets_possible_revenue">Possible revenue:</string>
    <string name="dollar_sign">$</string>
    <string name="go_back">Back</string>
    <string name="username">Username:</string>
    <string name="email">E-Mail:</string>
    <string name="balance">Balance:</string>
    <string name="sign_out">Sign out</string>
    <string name="bet_game">BetGame</string>
    <string name="profile">My Profile</string>
    <string name="create_account">Create Account</string>
    <string name="guest">Guest</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create Account</string>
    <string name="new_account">New Account</string>
    <string name="create_email">E-Mail:</string>
    <string name="password">Password:</string>
    <string name="guest_message">Seems like you are still registered as a Guest. If you´d like to enjoy the full experience of BetGame, create a free Account:</string>
    <string name="welcome_to_bet_game">Welcome to BetGame!</string>
    <string name="bet_on_real_events">Bet on Real Events</string>
    <string name="grow_your_balance">Grow your Balance</string>
    <string name="get_started_funds">Starting Bonus</string>
    <string name="welcome_screen_text">This Application allows you to bet on many different real sports events! In the next screens you will get some useful instructions to use BetGame properly.</string>
    <string name="real_events_text">Placeholder</string>
    <string name="grow_balance_text">Placeholder</string>
    <string name="start_funds_text">Placeholder</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string-array name="daily_challenges">
        <item>Watch one Ad</item>
        <item>Place one Bet</item>
        <item>Place two Bets</item>
        <item>Earn 500$</item>
        <item>Earn 100$</item>
        <item>Earn 200$</item>
        <item>Place three Bets</item>
        <item>Spin the Lucky Wheel</item>
        <item>Watch two Ads</item>
    </string-array>
    <string-array name="weekly_challenges">
        <item>Place 5 Bets</item>
        <item>Win 1 Bet</item>
        <item>Win 2 Bets</item>
        <item>Win 3 Bets</item>
        <item>Earn 500$</item>
        <item>Earn 600$</item>
        <item>Earn 1000$</item>
        <item>Earn 750$</item>
        <item>Spin the Lucky Wheel 5 times</item>
    </string-array>
</resources>
