<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/toolbar_back"
        android:id="@+id/toolbar_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_profile"
        app:layout_constraintTop_toBottomOf="@id/toolbar_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/profile"
        android:fontFamily="@font/roboto_bold"
        android:textSize="35sp"
        android:layout_marginTop="10sp"/>

    <ImageView
        android:layout_width="84sp"
        android:layout_height="84sp"
        android:id="@+id/iv_profile_icon"
        android:src="@drawable/ic_account_circle_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5sp"
        android:adjustViewBounds="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_username_title"
        app:layout_constraintTop_toTopOf="@id/tv_username"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20sp"
        android:text="@string/username"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_username"
        tools:text="Username"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_icon"
        android:layout_marginTop="10sp"
        app:layout_constraintLeft_toRightOf="@id/tv_username_title"
        android:text="@string/guest"
        android:textSize="25sp"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/roboto_bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_email_title"
        app:layout_constraintTop_toBottomOf="@id/tv_username_title"
        app:layout_constraintLeft_toLeftOf="@id/tv_username_title"
        android:text="@string/email"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_email"
        app:layout_constraintTop_toTopOf="@id/tv_email_title"
        app:layout_constraintLeft_toLeftOf="@id/tv_username"
        android:text="@string/guest"
        android:textSize="25sp"
        android:fontFamily="@font/roboto_bold"
        tools:text="E-Mail"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_balance_title"
        app:layout_constraintTop_toBottomOf="@id/tv_email_title"
        app:layout_constraintLeft_toLeftOf="@id/tv_email_title"
        android:text="@string/balance"
        android:textSize="25sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_balance"
        tools:text="Balance"
        app:layout_constraintTop_toTopOf="@id/tv_balance_title"
        app:layout_constraintLeft_toLeftOf="@id/tv_email"
        android:textSize="25sp"
        android:fontFamily="@font/roboto_bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/grey"
        android:layout_marginTop="10sp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_balance"
        app:layout_constraintBottom_toTopOf="@id/tv_guest_message"
        app:layout_constraintVertical_bias="0.3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_guest_message"
        android:text="@string/guest_message"
        app:layout_constraintBottom_toTopOf="@id/create_account_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:layout_marginBottom="35sp"
        android:textSize="22sp"
        android:fontFamily="@font/roboto_medium"
        android:visibility="invisible"
        android:enabled="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_button"
        app:layout_constraintBottom_toTopOf="@id/sign_out_button"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/outline_sign_in_button"
        android:elevation="4sp"
        android:text="@string/create_account"
        android:textColor="@color/oddDrawBackground"
        android:visibility="invisible"
        android:enabled="false"/>

    <com.betgame.perhapps.custom_views.CustomViewButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_out_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:elevation="4sp"
        android:text="@string/sign_out"
        android:textColor="@color/colorAccent"
        android:background="@drawable/sign_out_button_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>