<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/walkthrough_background">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/icon_football"
        android:id="@+id/icon_wrapper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/betgame_title"
        android:text="@string/welcome_to_bet_game"
        app:layout_constraintTop_toBottomOf="@id/icon_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="40sp"
        android:textColor="@color/colorInnerCards"/>

    <View
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:id="@+id/underline_title"
        app:layout_constraintTop_toBottomOf="@id/betgame_title"
        app:layout_constraintLeft_toLeftOf="@id/betgame_title"
        app:layout_constraintRight_toRightOf="@id/betgame_title"
        android:background="@color/colorInnerCards"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_screen_text"
        app:layout_constraintBottom_toTopOf="@id/bottom_next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tv_walktrhough_text"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginBottom="80sp"
        android:textSize="25sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="@color/colorInnerCards"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bottom_next"
        android:text="@string/skip"
        android:background="@color/transparent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_next"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next"
        android:background="@color/transparent"/>

</androidx.constraintlayout.widget.ConstraintLayout>