<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_new_bet_title"
        android:id="@+id/place_new_bet_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:enabled="false"
        android:id="@+id/title_confirm_bet"
        android:text="@string/title_confirm_bet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_team_odd_bet_fragment"
        app:layout_constraintTop_toBottomOf="@id/home_team_name_bet_sheet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/draw_odd_bet_fragment"
        android:background="@drawable/main_bet_border"
        android:textSize="18sp"
        android:padding="9sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_team_name_bet_sheet"
        app:layout_constraintTop_toBottomOf="@id/place_new_bet_title"
        app:layout_constraintLeft_toLeftOf="@id/home_team_odd_bet_fragment"
        app:layout_constraintRight_toRightOf="@id/home_team_odd_bet_fragment"
        android:layout_marginTop="10sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/away_team_name_bet_sheet"
        app:layout_constraintTop_toTopOf="@id/home_team_name_bet_sheet"
        app:layout_constraintLeft_toLeftOf="@id/away_team_odd_bet_fragment"
        app:layout_constraintRight_toRightOf="@id/away_team_odd_bet_fragment"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/draw_name_bet_sheet"
        app:layout_constraintTop_toTopOf="@id/home_team_name_bet_sheet"
        app:layout_constraintLeft_toLeftOf="@id/draw_odd_bet_fragment"
        app:layout_constraintRight_toRightOf="@id/draw_odd_bet_fragment"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/away_team_odd_bet_fragment"
        app:layout_constraintTop_toTopOf="@id/home_team_odd_bet_fragment"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/main_bet_border"
        app:layout_constraintLeft_toRightOf="@id/draw_odd_bet_fragment"
        android:textSize="18sp"
        android:padding="9sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/draw_odd_bet_fragment"
        app:layout_constraintTop_toTopOf="@id/home_team_odd_bet_fragment"
        app:layout_constraintRight_toLeftOf="@id/away_team_odd_bet_fragment"
        app:layout_constraintLeft_toRightOf="@id/home_team_odd_bet_fragment"
        android:background="@drawable/draw_bet_border"
        android:textSize="18sp"
        android:padding="9sp"
        />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/place_new_bet_seek_bar"
        app:layout_constraintTop_toBottomOf="@id/tv_current_wage"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_amount_to_bet"
        app:layout_constraintBottom_toTopOf="@id/place_new_bet_seek_bar"
        app:layout_constraintLeft_toLeftOf="@id/place_new_bet_title"
        android:text="@string/string_amount_info"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:textSize="18sp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_current_wage"
        android:hint="@string/default_value_place_new_bet"
        app:layout_constraintBottom_toTopOf="@id/place_new_bet_seek_bar"
        app:layout_constraintLeft_toRightOf="@id/tv_amount_to_bet"
        app:layout_constraintTop_toBottomOf="@id/home_team_odd_bet_fragment"
        android:layout_margin="10sp"
        android:inputType="number"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSumbit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_new_bet_seek_bar"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/submit_button_text"
        android:background="@drawable/submit_button_design"
        android:textColor="@color/backgroundApp"
        android:layout_marginBottom="10dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:enabled="false"
        android:id="@+id/buttonFinalConfirm"
        android:text="@string/confirm_button_text"
        android:background="@drawable/submit_button_design"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_new_bet_seek_bar"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_button_bet_fragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:drawableLeft="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:text="@string/back_button_bet_activity"
        android:visibility="invisible"
        android:enabled="false"
        android:padding="10sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/team_betted_on"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="@id/title_confirm_bet"
        app:layout_constraintBottom_toTopOf="@id/possible_revenue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/possible_revenue"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/team_betted_on"
        app:layout_constraintBottom_toTopOf="@id/buttonFinalConfirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>