<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/create_account_title"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_email_title"
        app:layout_constraintTop_toBottomOf="@id/create_account_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/create_email"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="15sp"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        app:layout_constraintTop_toTopOf="@id/create_account_email_title"
        app:layout_constraintLeft_toRightOf="@id/create_account_email_title"
        app:layout_constraintBottom_toBottomOf="@id/create_account_email_title"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:inputType="textEmailAddress" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorOuterCards"
        android:id="@+id/space_divider"
        app:layout_constraintTop_toBottomOf="@id/create_account_email_title"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="15sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_password_title"
        app:layout_constraintTop_toBottomOf="@id/space_divider"
        app:layout_constraintLeft_toLeftOf="@id/create_account_email_title"
        android:text="@string/password"
        android:textSize="26sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="15sp"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        app:layout_constraintLeft_toRightOf="@id/tv_password_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_password_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_password_title"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:inputType="textPassword"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorOuterCards"
        android:id="@+id/second_space_divider"
        app:layout_constraintTop_toBottomOf="@id/tv_password_title"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="15sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_username_title"
        app:layout_constraintTop_toBottomOf="@id/second_space_divider"
        app:layout_constraintLeft_toLeftOf="@id/create_account_email_title"
        android:text="@string/username"
        android:textSize="26sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="15sp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tv_username_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_username_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_username_title"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:inputType="textPersonName"
        />

</androidx.constraintlayout.widget.ConstraintLayout>