<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/card_view_watch_ad"
        android:background="@drawable/background_card_view_semi_transparent"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button_view_ad"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="10sp"
            android:id="@+id/click_to_log_out"
            android:textSize="20sp"
            android:text="@string/view_add_get_reward"
            android:fontFamily="@font/roboto_medium" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/button_view_ad"
            app:layout_constraintTop_toTopOf="@id/click_to_log_out"
            app:layout_constraintBottom_toBottomOf="@id/click_to_log_out"
            android:layout_marginRight="10sp"
            android:text="@string/ad_reward"
            android:background="@drawable/rectangle"
            android:padding="20sp"
            android:fontFamily="@font/roboto_medium" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_view_watch_ad"
        android:id="@+id/card_view_daily_spin"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:background="@drawable/background_card_view_semi_transparent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/daily_spin"
            android:textSize="20sp"
            android:text="@string/daily_spin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>