<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_team_name_reward_sheet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/home_team_score_display"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        tools:text="Home Team"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vs_tv_reward_bet"
        android:text="@string/semicolon"
        app:layout_constraintTop_toTopOf="@id/home_team_name_reward_sheet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_team_score_display"
        app:layout_constraintRight_toLeftOf="@id/vs_tv_reward_bet"
        app:layout_constraintTop_toTopOf="@id/vs_tv_reward_bet"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginRight="5sp"
        android:textSize="20sp"
        tools:text="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/away_team_score_display"
        app:layout_constraintLeft_toRightOf="@id/vs_tv_reward_bet"
        app:layout_constraintTop_toTopOf="@id/vs_tv_reward_bet"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginLeft="5sp"
        android:textSize="20sp"
        tools:text="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/away_team_name_reward_sheet"
        app:layout_constraintTop_toTopOf="@id/home_team_name_reward_sheet"
        app:layout_constraintLeft_toRightOf="@id/away_team_score_display"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/roboto_regular"
        android:textSize="20sp"
        tools:text="Away Team"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/claim_reward_button"
        app:layout_constraintRight_toLeftOf="@+id/reward_text_view_reward_sheet"
        android:text="@string/your_reward"
        android:fontFamily="@font/roboto_regular"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reward_text_view_reward_sheet"
        app:layout_constraintRight_toLeftOf="@id/claim_reward_button"
        app:layout_constraintTop_toTopOf="@id/claim_reward_button"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="7sp"
        android:layout_marginRight="40sp"
        tools:text="500$"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/claim_reward_button"
        android:text="@string/claim_reward"
        app:layout_constraintTop_toBottomOf="@id/home_team_name_reward_sheet"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/roboto_regular"
        android:backgroundTint="@color/oddDrawBackground" />

</androidx.constraintlayout.widget.ConstraintLayout>